# minecraft-jars-java-descriptions

./: .gitignore  .gitmodules  README.md  _config.yml  index.json  index.py  jars.json  jars.py  logging.conf  meta.json  meta.py  pyproject.toml  update.py  util.py
.github/workflows/: update.yml
mappings/: 1.0-client.tiny  1.1-client.tiny  1.10-pre1-client.tiny  1.10-pre1-server.tiny  1.10-pre2-client.tiny  1.10-server.tiny  1.10.1-client.tiny  1.10.2-server.tiny  1.11-client.tiny  1.11-pre1-client.tiny  1.11-pre1-server.tiny  1.11-server.tiny  1.11.1-client.tiny  1.11.1-server.tiny  1.12-client.tiny  1.12-pre1-client.tiny  1.12-pre2-client.tiny  1.12-pre3-client.tiny  1.12-pre5-client.tiny  1.12-pre6-client.tiny  1.12.1-client.tiny  1.12.2-client.tiny  1.12.2-pre1-client.tiny  1.12.2-pre2-client.tiny  1.13-client.tiny  1.13-pre1-client.tiny  1.13-pre10-client.tiny  1.13-pre2-client.tiny  1.13-pre3-client.tiny  1.13-pre4-client.tiny  1.13-pre5-client.tiny  1.13-pre6-client.tiny  1.13-pre7-client.tiny  1.13-pre8-client.tiny  1.13-pre9-client.tiny  1.13.1-pre1-client.tiny  1.13.1-pre2-client.tiny  1.13.2-pre1-client.tiny  1.13.2-pre2-client.tiny  1.14 Pre-Release 1-client.tiny  (+988 more)
